Changed name to DSP-Controller

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>datascienceplatform-oauth2</name>
+	<name>DSP-Controller</name>
 	<comment></comment>
 	<projects>
 	</projects>
